--- a/index.html
+++ b/index.html
@@ -1,115 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <title>Музей вычислительной техники</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <section class="heater">
-      <div class="heater__phone">
-        <img src="img/n_ico_phone.png" alt="" /> +7 (48751) 5-42-32
-      </div>
-      <div class="heater__email">
-        <img src="img/n_ico_mail.png" alt="" /> spo.tek@tularegion.ru
-      </div>
-      <div class="heater__socials socials">
-        <div class="socials__vk">
-          <span class="icon-vk"></span>
-        </div>
-        <div class="socials__telegram">
-          <span class="icon-telegram1"></span>
-        </div>
-        <div class="socials__rutube"><img src="img/n_rutube.png" alt="" /></div>
-      </div>
-    </section>
-    <header class="header">
-      <div class="header__teklogo">
-        <a href="https://tulatek.ru/"> <img src="img/tek_logo.png" alt="" /></a>
-      </div>
-      <div class="header__title">
-        Музей вычислительной техники <br />
-        Тульского экономичесого колледжа
-      </div>
-      <div class="header__muslogo"><img src="img/logo.png" alt="" /></div>
-    </header>
-    <nav class="nav">
-      <ul class="nav__list">
-        <a href="index.html">
-          <li class="active">Главная</li>
-        </a>
-        <a href="news.html">
-          <li>Новости</li>
-        </a>
-        <a href="portal.html">
-          <li>Портал</li>
-        </a>
-      </ul>
-      <div class="nav__search">
-        <input type="text" name="search" id="search" placeholder="Поиск..." />
-        <img src="img/lupa.png" alt="" />
-      </div>
-    </nav>
-    <section class="slide1">
-      <img src="img/slide1.png" alt="" />
-    </section>
-    <section class="slide2">
-      <img src="img/slide2.png" alt="" />
-    </section>
-    <footer class="footer">
-      <div class="footer__teklogo">
-        <img src="img/tek_logo.png" alt="" />
-      </div>
-      <div class="footer__center">
-        <div class="footer__doverie"><img src="img/doverie.png" alt="" /></div>
-        <div class="footer__contacts">
-          <div class="footer__address">
-            Адрес:301240, Тульская область,г.Щёкино, ул.Советская, 40
-          </div>
-          <div class="footer__email">
-            Электронная почта: <br />
-            spo.tek@tularegion.ru
-          </div>
-          <div class="footer__phone">
-            Телефон/факс: <br />
-            (+748751)5-42-32 - Секретарь директора<br />
-            5-45-65 - Учебная часть<br />
-            5-48-32 - Заочное отделение
-          </div>
-        </div>
-      </div>
-      <div class="footer__muslogo"><img src="img/logo.png" alt="" /></div>
-    </footer>
-    <div class="fooder">
-      <div class="fooder__name">ГПОУ ТО "ТЭК" © 2007-2023</div>
-      <ul class="fooder__list">
-        <a href="index.html">
-          <li>Главная</li>
-        </a>
-        <a href="news.html">
-          <li>Новости</li>
-        </a>
-        <a href="">
-          <li>Контакты</li>
-        </a>
-        <a href="">
-          <li>Карта сайта</li>
-        </a>
-      </ul>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/fonts.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <title>Музей вычислительной техники</title>
+</head>
+
+<body>
+  <section class="heater">
+    <div class="heater__phone">
+      <img src="img/n_ico_phone.png" alt="" /> +7 (48751) 5-42-32
     </div>
+    <div class="heater__email">
+      <img src="img/n_ico_mail.png" alt="" /> spo.tek@tularegion.ru
+    </div>
+    <div class="heater__socials socials">
+      <div class="socials__vk">
+        <a href=""><span class="icon-vk"></span></a>
+      </div>
+      <div class="socials__telegram">
+        <a href=""><span class="icon-telegram1"></span></a>
 
-    <script src="js/main.js"></script>
-  </body>
+      </div>
+      <div class="socials__rutube">
+        <a href=""><img src="img/n_rutube.png" alt="" /></a>
+
+      </div>
+    </div>
+  </section>
+  <header class="header">
+    <div class="header__teklogo">
+      <a href="https://tulatek.ru/"> <img src="img/tek_logo.png" alt="" /></a>
+    </div>
+    <div class="header__title">
+      Музей вычислительной техники <br />
+      Тульского экономичесого колледжа
+    </div>
+    <div class="header__muslogo"><img src="img/logo.png" alt="" /></div>
+  </header>
+  <nav class="nav">
+    <ul class="nav__list">
+      <a href="index.html">
+        <li class="active">Главная</li>
+      </a>
+      <a href="news.html">
+        <li>Новости</li>
+      </a>
+      <a href="portal.html">
+        <li>Портал</li>
+      </a>
+    </ul>
+    <div class="nav__search">
+      <input type="text" name="search" id="search" placeholder="Поиск..." />
+      <img src="img/lupa.png" alt="" />
+    </div>
+  </nav>
+  <section class="slide1">
+    <img src="img/slide1.png" alt="" />
+  </section>
+  <section class="slide2">
+    <img src="img/slide2.png" alt="" />
+  </section>
+  <footer class="footer">
+    <div class="footer__teklogo">
+      <img src="img/tek_logo.png" alt="" />
+    </div>
+    <div class="footer__center">
+      <div class="footer__doverie"><img src="img/doverie.png" alt="" /></div>
+      <div class="footer__contacts">
+        <div class="footer__address">
+          Адрес:301240, Тульская область,г.Щёкино, ул.Советская, 40
+        </div>
+        <div class="footer__email">
+          Электронная почта: <br />
+          spo.tek@tularegion.ru
+        </div>
+        <div class="footer__phone">
+          Телефон/факс: <br />
+          (+748751)5-42-32 - Секретарь директора<br />
+          5-45-65 - Учебная часть<br />
+          5-48-32 - Заочное отделение
+        </div>
+      </div>
+    </div>
+    <div class="footer__muslogo"><img src="img/logo.png" alt="" /></div>
+  </footer>
+  <div class="fooder">
+    <div class="fooder__name">ГПОУ ТО "ТЭК" © 2007-2023</div>
+    <ul class="fooder__list">
+      <a href="index.html">
+        <li>Главная</li>
+      </a>
+      <a href="news.html">
+        <li>Новости</li>
+      </a>
+      <a href="">
+        <li>Контакты</li>
+      </a>
+      <a href="">
+        <li>Карта сайта</li>
+      </a>
+    </ul>
+  </div>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
