--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="header__title">
       Музей вычислительной техники <br />
-      Тульского экономичесого колледжа
+      Тульского экономического колледжа
     </div>
     <div class="header__muslogo"><img src="img/logo.png" alt="" /></div>
   </header>
