--- a/blog.html
+++ b/blog.html
@@ -41,12 +41,207 @@
     <nav class="nav">
         <div class="container">
             <div class="nav__links">
-                <li><a class="nav__active" href="index.html">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="ecsposition.html">Экспозиции</a></li>
-                <li><a href="blog.html">Блог</a></li>
+                <li><a class="nav__active" href="blog.html">Блог</a></li>
             </div>
         </div>
     </nav>
+
+    <section class="blog">
+        <div class="container blog__wrapper">
+            <div class="blog__title title">Блог нашего музея</div>
+            <div class="blog__posts">
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__post post">
+                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
+                    <div class="post__text">
+                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__link">
+                            Читать далее...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="blog__pagination pagination">
+                <button class="pagination__element pagination__active">&#10094;</button>
+                <button class="pagination__element">1</button>
+                <button class="pagination__element">2</button>
+                <button class="pagination__element">3</button>
+                <button class="pagination__element">&#10095;</button>
+            </div>
+        </div>
+    </section>
     <section class="subscribe">
         <div class="container">
             <div class="subscribe__wrapper">
