--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
                             скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
-                            Читать далее...
+                            <a href="">Читать далее...</a>
                         </div>
                     </div>
                 </div>
