--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,7 @@
             <div class="blog__title title">Блог нашего музея</div>
             <div class="blog__posts">
                 <div class="blog__post post">
+                    <div class="post__animation"></div>
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
@@ -85,6 +86,7 @@
                 <div class="blog__post post">
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
+                        <div class="post__animation"></div>
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
                         <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
                             скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
